--- a/reminder4.html
+++ b/reminder4.html
@@ -53,7 +53,10 @@
                 if (timer === 0) {
                     clearInterval(intervalId);
                     alarmSound.play();
-                    alert('You have arrived at the station. Please get off the car.');
+                    alarmSound.play();
+                    alarmSound.play();
+                    alarmSound.play();
+                    alarmSound.play();
                 }
             }, 1000);
 
