--- a/reminder4.html
+++ b/reminder4.html
@@ -57,6 +57,13 @@
                     alarmSound.play();
                     alarmSound.play();
                     alarmSound.play();
+                    alarmSound.play();
+                    alarmSound.play();
+                    alarmSound.play();
+                    alarmSound.play();
+                    alarmSound.play();
+                    alarmSound.play();
+                    alarmSound.play();
                 }
             }, 1000);
 
