--- a/reminder4.html
+++ b/reminder4.html
@@ -52,18 +52,8 @@
 
                 if (timer === 0) {
                     clearInterval(intervalId);
-                    alarmSound.play();
-                    alarmSound.play();
-                    alarmSound.play();
-                    alarmSound.play();
-                    alarmSound.play();
-                    alarmSound.play();
-                    alarmSound.play();
-                    alarmSound.play();
-                    alarmSound.play();
-                    alarmSound.play();
-                    alarmSound.play();
-                    alarmSound.play();
+                    alarmSound.play()
+               
                 }
             }, 1000);
 
