--- a/reminder5.html
+++ b/reminder5.html
@@ -52,7 +52,7 @@
 
                 if (timer === 0) {
                     clearInterval(intervalId);
-                    alarmSound.play(*2)
+                    alarmSound.play
                
                 }
             }, 1000);
