--- a/map.html
+++ b/map.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>導航應用程式</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Android Icons -->
+    <link rel="icon" sizes="192x192" href="android-icon-192x192.png">
+    <link rel="icon" sizes="512x512" href="android-icon-512x512.png">
+    
     <style>
         body {
             padding: 20px;
